[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["isoplots"]

[project]
name = "isoplots"
version = "0.0.2"
description = "Plot Utilities for ISOFIT"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["isofit", "isofit-plots"]
authors = [
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"}
]
maintainers = [
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"},
  {name = "Philip Brodrick", email = "philip.brodrick@jpl.nasa.gov"}
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "click",
  "matplotlib",
  "nicegui",
  "plotext",
  "rioxarray",
  "spectral",
  "xarray",
]

[project.urls]
repository = "http://github.com/isofit/isofit-plots"

[project.scripts]
isoplots = "isoplots:__main__.cli"

[project.entry-points."xarray.backends"]
envi = "isoplots.isonice.wd:EnviBackendEntrypoint"
