[metadata]
name = isoplots
version = 0.0.1
author =
author_email =
url = http://github.com/isofit/isofit-plots
description = Plot Utilities for ISOFIT
long_description = file: README.rst
long_description_content_type = text/x-rst

license = Apache License v2
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
install_requires =
  click
  matplotlib
  plotext
  xarray
